Copy Constructors for StateObservation classes and other things
- all classes derived from StateObservation (including ObserverBase) now have a proper copy constructor
- StateObserver*.copy calls this copy constructor
- bug fixes in MCTS.SingleTreeNode: some checks on child!=null were missing
- small fix in Arena / XArenaButtonsGui on enableButtons
- more try-catch in GBGBatch (on NumberFormatException)
- EvaluatorSim: switched mode 1 and 2
- GameBoardSimGui:  extended by GameStatsSim and GameInfoSim object